#235 make biceps-model, dpws-model, and mdpws-model immutable